RESOLVED FIXED286758
[WGSL] Using UINT_MAX for location triggers a RELEASE_ASSERT
https://bugs.webkit.org/show_bug.cgi?id=286758
Summary [WGSL] Using UINT_MAX for location triggers a RELEASE_ASSERT
Tadeu Zagallo
Reported 2025-01-30 10:35:01 PST
...
Attachments
Tadeu Zagallo
Comment 1 2025-01-30 10:35:03 PST
Tadeu Zagallo
Comment 2 2025-01-30 10:40:49 PST
EWS
Comment 3 2025-02-03 05:08:02 PST
Committed 289729@main (4986246ecab7): <https://commits.webkit.org/289729@main> Reviewed commits have been landed. Closing PR #39773 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.